hphp/test/zend/good/Zend/tests/bug52484_3.php.expectf

Fatal error: Cannot access empty property in %s/bug52484_3.php on line 5
